Broken 'button' layout with display:table on www.weekly10.com https://bugs.webkit.org/show_bug.cgi?id=262111 <rdar://problem/116110440>

Reviewed by Antti Koivisto.

When a table is a flex or grid item, the container can stretch it to
match the tallest sibling. The stretched height is a "border-box"
value -- it includes the table's border and padding on all sides.

To figure out how much space the rows get, we need to subtract the
border and padding from this stretched height. The code was only
subtracting the bottom border+padding, forgetting the top side.
So the table ended up too tall by exactly one side of padding
(or border).

* LayoutTests/imported/w3c/web-platform-tests/css/css-tables/table-stretch-in-flex-and-grid.html: Added.
* Source/WebCore/rendering/RenderTable.cpp:
(WebCore::RenderTable::layout):

Canonical link: https://commits.webkit.org/311276@main